3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Make random maps take the region of the map creates them. Affected files:
 random_maps/{random_maps.h, random_maps.c}
 server/main.c
Brendan Lally 2005-08-11

------------------------------------------------------------------------------
Changes for 1.8.0:

Update for release 1.8.0.
include/Makefile.am:  missing quest.h file
Rest automatic rebuild
MSW 2005-08-10

Replaced "depletion" by ARCH_DEPLETION (defined in object.h). Affected files:
 common/living.c
 include/object.h
 server/apply.c gods.c spell_effect.c
Ryo 2005-08-10

server/player.c: Set map for arrow as returned by get_map_flags -
   otherwise when firing at edge of tiled maps, arrows could end up
   in wrong place.
MSW 2005-08-09

include/config.h: Make DEBUG default - appears last commit changed this
   as unrelated to actual changes in place.
include/sproto.h: Rebuild
server/player.c: fire_bow() - add checks for wall/out of map.  fire_bow()
   wasn't using right coordinates on check, which caused problems in
   threewide mode at edge of maps.
MSW 2005-08-07

plugin_logger/plugin_logger.c: make it compile under Win32.
Ryo 2005-07-30

server/player.c: fix crash when news or rules > HUGE_BUF.
Ryo 2005-07-29

server/{monster.c, pets.c}: Fix bugs in arena petmode and clean up most of
   it's logic into it's own function.
lib/help/petmode: Document the arena petmode in the "help petmode" output.
Alex Schultz 2005-07-28

server/skills.c: use correct sp/grace for inscription.
Ryo 2005-07-27

The following changes prevent spells in player's inventories from being
damaged by casting spells, using skills, or praying.