@@ -188,6 +188,7 @@ int command_logs(object *op, char *params);
 int command_applymode(object *op, char *params);
 int command_bowmode(object *op, char *params);
 int command_petmode(object *op, char *params);
+int command_showpets(object *op, char *params);
 int command_usekeys(object *op, char *params);
 int command_resistances(object *op, char *params);
 int command_help(object *op, char *params);
